[package]
name = "hel-thread-pool"
authors = ["Hellaeh <me@hellaeh.com>"]
version = "0.1.2"
edition = "2021"
description = "Simple sync thread pool"
license = "MIT"
repository = "https://github.com/Hellaeh/thread-pool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
